Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1686

t_php_generator.cc uses "and" instead of "&&", and causes compiler errors with Visual Studio

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9
    • 0.9
    • PHP - Compiler
    • None
    • Visual Studio 2010.

    • Patch Available

    Description

      t_php_generator.cc uses "and" instead of "&&", and causes compiler errors with Visual Studio 2010.

      Attachments

        1. php_and_error.patch
          0.6 kB
          Ben Craig

        Activity

          People

            Unassigned Unassigned
            ben.craig Ben Craig
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: