THRIFT-1686 t_php_generator.cc uses "and" instead of "&&", and causes compiler errors with Visual Studio Patch: Ben Craig

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1381696 13f79535-47bb-0310-9956-ffa450edef68